--- a/framework/src/CMakeLists.txt
+++ b/framework/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 #-----------------------------------------------------------------------------
 # Source files
 #-----------------------------------------------------------------------------
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-copy")
 
 set(_srcs
   util/Any.cpp
